--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "game-exit-room",
   "type": "module",
   "version": "0.0.1",
@@ -9,6 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.13.7"
+    "@astrojs/react": "^4.3.1",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
+    "@react-three/rapier": "^2.1.0",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@types/three": "^0.180.0",
+    "react-dom": "^19.1.1",
+    "react": "^19.1.1",
+    "astro": "^5.13.7",
+    "leva": "^0.10.0",
+    "three": "^0.180.0",
+    "zustand": "^5.0.8"
   }
 }
